# beam_inspection

./: CMakeLists.txt  README.md  package.xml
pipelines/: params.py  run_all.py  run_helpers.py  run_map_builder.py
pipelines/inputs/: QuantifyDefectsConfig.json  datasets_config.json  map_labeler_config.json  run_all_config.json
tools/bag_processing/: process_ig2_rosbag_for_inspection.py
